--- a/package.json
+++ b/package.json
@@ -11,6 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "browser-sync": "^2.26.3",
+    "gulp-cache": "^1.1.1",
+    "gulp-closure-compiler": "^0.4.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-imagemin": "^5.0.3",
+    "gulp-minify": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.4",
+    "run-sequence": "^2.2.1",
     "uglify": "^0.1.5",
     "uglify-js": "^3.4.9"
   },
